--- a/index.html
+++ b/index.html
@@ -6,13 +6,33 @@
       <!--Import materialize.css-->
       <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="style.css">
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
+        <nav>
+        <div class="nav-wrapper">
+          <a href="#" class="brand-logo">Khatam Calculator</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="sass.html">Home</a></li>
+            <li><a href="badges.html">By Pages</a></li>
+            <li><a href="collapsible.html">By Days</a></li>
+          </ul>
+        </div>
+      </nav>
 
+    <div class="container" id="home-section">
+      <div class="center-align">
+      <h1>Khatam Calculator</h1>
+      <h4>This is a simple web app that helps you gauge how long it will take for you to khatam the Quran</h4>
+      <a class="waves-effect waves-light btn">By Pages</a>
+      <a class="waves-effect waves-light btn">By Days</a>
+      </div>
+    </div>
+            
       <!--JavaScript at end of body for optimized loading-->
       <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
